@@ -4,6 +4,8 @@
 =======================================================
 
 
+08 Jun 2009      Bug fixed in embed.f90: dos was not recover of frequencies. (AF)
+
 07 Jun 2009      Parallel read-in of selfenergies added to embed.x . (AF)
 
 05 Jun 2009      Embedding code completed and partly tested. (AF)
